<resources>
    <string name="app_name">Run With You</string>

    <!-- common -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="exit_now">Exit now</string>
    <string name="exit_tips">Again to exit the program</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="invalid_input">Invalid input</string>
    <string name="new_version">New version</string>
    <string name="version">Version</string>
    <string name="update">Update</string>
    <string name="modify">Modify</string>
    <string name="refresh">Refresh</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="sorry">Sorry</string>

    <string name="today">Today</string>
    <string name="together">Together</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>
    <string name="step">Steps</string>
    <string name="i_see">I see</string>
    <string name="not_support_step_count">Oops, Your device does not support the step function</string>

    <!--preferences-->
    <string name="pref_target_step" translatable="false">pref_target_step</string>
    <string name="pref_category_memory_resident" translatable="false">pref_category_memory_resident</string>
    <string name="pref_memory_resident_white_list" translatable="false">pref_memory_resident_white_list</string>
    <string name="pref_memory_resident_foreground_service" translatable="false">pref_memory_resident_foreground_service</string>
    <string name="pref_etc_check_update" translatable="false">pref_etc_check_update</string>
    <string name="pref_etc_issue" translatable="false">pref_etc_issue</string>
    <string name="pref_etc_about" translatable="false">pref_etc_about</string>


</resources>
